--- a/src/app/components/options/options.component.css
+++ b/src/app/components/options/options.component.css
@@ -15,12 +15,14 @@ width: 35%;
 background-color: #E64FC5;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 25px;
+padding: 0px 10px 0px 10px;
+}
+.container-categories {
 display: flex;
 justify-content: center;
 align-items: center;
 align-content: center;
 flex-direction: column;
-padding: 0px 10px 0px 10px;
 }
 
 button{
